<resources>
    <string name="app_name">Calculator</string>
    <string name="bill_ammountlbl">Bill ammount</string>
    <string name="bill_ammount">35.5</string>
    
    <string name="percent">Percent</string>
    <string name="tip_percent">10%</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>

    <string name="tip_ammount_label">Tip</string>
    <string name="tip_ammount">0.00$</string>

    <string name="total_ammountlbl">Total</string>
    <string name="total_ammount">0.00$</string>
</resources>
