<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.katero.calculator.MainActivity">

    <TextView
        android:id="@+id/bill_ammountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_ammountlbl"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <!-- @string/bill_ammount kathorizei to text pou tha mpei
    to opoio einai grammeno sto string.xml sth metabliti bill_ammount -->

        <EditText
            android:id="@+id/bill_ammountEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/bill_ammountLabel"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/bill_ammountLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/bill_ammount"
            android:textSize="20sp">

        </EditText>
    <requestFocus/>

    <TextView
        android:id="@+id/percentlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/bill_ammountLabel"
        android:layout_below="@id/bill_ammountLabel"
        android:padding="10dp"
        android:text="@string/percent"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/percentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/percentlabel"
        android:layout_alignLeft="@id/bill_ammountEdit"
        android:padding="5dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <Button
        android:id="@+id/downbtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@id/percentText"
        android:layout_toRightOf="@+id/percentText"
        android:text="@string/decrease"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/upbtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@id/downbtn"
        android:layout_toRightOf="@+id/downbtn"
        android:text="@string/increase"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/percentlabel"
        android:layout_below="@id/percentlabel"
        android:padding="10dp"
        android:text="@string/tip_ammount_label"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tip_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tipLabel"
        android:layout_alignLeft="@id/bill_ammountEdit"
        android:padding="5dp"
        android:text="@string/tip_ammount"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tipLabel"
        android:layout_below="@id/tipLabel"
        android:padding="10dp"
        android:text="@string/total_ammountlbl"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/TotalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/TotalLabel"
        android:layout_alignLeft="@id/tip_Text"
        android:padding="5dp"
        android:text="@string/total_ammount"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tipLabel"
        android:layout_toEndOf="@+id/tipLabel" />
</RelativeLayout>
